Tags support added. Next: taggedWith method